methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:29: error: not found: value faireMotif
  faireMotif()
  ^